fix username overflow in comment section. make it allow alphanumeric username only

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -396,10 +396,11 @@ textarea, select, input, button { outline: none; }
 }
 
 .comment-info {
-    width: 150px;
+    overflow-wrap: break-word;
+    width: 140px;
     float: left;
     text-align: center;
     font-family: Verdana, serif;
     font-size: 15px;
-    margin: 0 0 0 -165px;
+    margin: 0 0 0 -170px;
 }
